--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -100,7 +100,7 @@ stages:
 - stage: Staging
   displayName: deploy to staging
   dependsOn: ['Build']
-  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/staging'))
+  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/releases/*'))
   jobs:
   - deployment: staging
     displayName: deploy to aks staging
@@ -145,7 +145,6 @@ stages:
 - stage: Prod
   displayName: deploy to prod
   dependsOn: ['Staging']
-  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/staging'))
   jobs:
   - deployment: prod
     displayName: deploy to aks prod
