--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -94,13 +94,13 @@ stages:
                 arguments: '--create-namespace --install --set image.repository=$(registryServerName)/$(projectName)' # Passando alguns argumrntos
 
 # ---------------------------------------------------------------------------
-#                           Deployment STAGING
+#                           Deployment Release
 # ---------------------------------------------------------------------------
 
-- stage: Staging
+- stage: Release
   displayName: deploy to staging
   dependsOn: ['Build']
-  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/releases/.*'))
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/releases/'))
   jobs:
   - deployment: staging
     displayName: deploy to aks staging
@@ -144,7 +144,7 @@ stages:
 
 - stage: Prod
   displayName: deploy to prod
-  dependsOn: ['Staging']
+  dependsOn: ['Release']
   jobs:
   - deployment: prod
     displayName: deploy to aks prod
