--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -55,7 +55,7 @@ stages:
   # Dependência do build com sucesso para rodar
   dependsOn: ['Build']
   # Condição para ser startado
-  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/dev'))
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
   jobs:
   - deployment: dev
     displayName: Deploy to aks dev
