--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -6,6 +6,8 @@ stages:
 - stage: BuildTest 
   displayName: 'Build and Test'
   jobs:
+    variables:
+      buildConfiguration: 'Release'
   - job: 'BuildTest'
     steps:
     - task: DotNetCoreCLI@2
