--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -27,7 +27,7 @@ stages:
         projects: '**/*Tests/*.csproj'
         arguments: '--configuration $(buildConfiguration)'
     
-    - script: dotnet test $(projectName) --logger trx
+    - script: dotnet test <test-project> --logger trx
     - task: PublishTestResults@2
       condition: succeededOrFailed()
       inputs:
