--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -8,41 +8,29 @@ stages:
   jobs:
   - job: 'BuildTest'
     steps:
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: 'restore'
-        feedsToUse: 'select'
-        vstsFeed: 'my-vsts-feed' # A series of numbers and letters
-      displayName: 'dotnet restore $(buildConfiguration)' 
+    - script: dotnet restore
+      displayName: 'dotnet restore'
+
+    - script: dotnet build --configuration $(buildConfiguration)
+      displayName: 'dotnet build $(buildConfiguration)'
 
     - task: DotNetCoreCLI@2
-      inputs:
-        command: build
-        projects: '**/*.csproj'
-        arguments: '--configuration $(buildConfiguration)'
-      displayName: 'dotnet build $(buildConfiguration)'  
-
-    - task: DotNetCoreCLI@2
-      displayName: 'Install dotnetsay'
-      inputs:
-        command: custom
-        custom: tool
-        arguments: 'install -g dotnetsay'
-
-    - task: DotNetCoreCLI@2
+      displayName: 'dotnet test $(buildConfiguration)'
       inputs:
         command: test
-        projects: '**/*.csproj'
-        arguments: '--configuration $(buildConfiguration)'
-      displayName: 'dotnet test $(buildConfiguration)' 
-    
-    - script: dotnet test --logger trx
-    - task: PublishTestResults@2
-      condition: succeededOrFailed()
+        projects: '**/*Tests/*.csproj'
+        arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
+
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet publish $(buildConfiguration)'
       inputs:
-        testRunner: VSTest
-        testResultsFiles: '**/*.trx'
-      displayName: 'dotnet publish $(buildConfiguration)' 
+        command: publish
+        publishWebProjects: True
+        arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+        zipAfterPublish: True
+
+    - task: PublishBuildArtifacts@1
+      displayName: 'publish artifacts' 
 
 
 - stage: Build 
