--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -18,7 +18,7 @@ stages:
       displayName: 'dotnet test $(buildConfiguration)'
       inputs:
         command: test
-        projects: '**/*Tests/*.csproj'
+        projects: '**/*.csproj'
         arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 
     - task: DotNetCoreCLI@2
