--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -7,11 +7,20 @@ stages:
   displayName: 'Build and Test'
   jobs:
   - job: 'BuildTest'
+
     steps:
+    - task: UseDotNet@2
+      inputs:
+        version: '3.0.x'
+        packageType: runtime
+
     - script: dotnet restore
       displayName: 'dotnet restore'
 
-    - script: dotnet build --configuration $(buildConfiguration)
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'build'
+        arguments: '--configuration $(buildConfiguration)'
       displayName: 'dotnet build $(buildConfiguration)'
 
     - task: DotNetCoreCLI@2
