--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -11,6 +11,11 @@ stages:
     steps:
     - task: UseDotNet@2
       inputs:
+        version: '5.0.x'
+        includePreviewVersions: true # Required for preview versions
+        
+    - task: UseDotNet@2
+      inputs:
         version: '3.0.x'
         packageType: runtime
 
