--- a/templates/multistage/dotnet/cicd-stages-pipeline.yml
+++ b/templates/multistage/dotnet/cicd-stages-pipeline.yml
@@ -55,7 +55,7 @@ stages:
       inputs:
         targetPath: '$(Build.ArtifactStagingDirectory)' 
         artifactName: '$(projectName)-publish'
-        publishLocation: 'Container'
+        # publishLocation: 'Container'
 
 # ---------------------------------------------------------------------------
 #                           BUILD AND PUSH
